force-app/main/default/objects/Music_Product_Return__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account making the return</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Music Product Returns</relationshipLabel>
    <relationshipName>Music_Product_Returns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>