force-app/main/default/objects/Music_Product_Return__c/fields/Music_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Music_Product_Item__c</fullName>
    <description>Product being returned</description>
    <label>Music Product Item</label>
    <referenceTo>Music_Product__c</referenceTo>
    <relationshipLabel>Music Product Returns</relationshipLabel>
    <relationshipName>Music_Product_Returns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>