force-app/main/default/objects/Music_Product_Return__c/fields/Number_of_products_returned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_products_returned__c</fullName>
    <label>Number of products returned</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>