force-app/main/default/objects/Music_Product_Return__c/fields/Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Associate handling return process.</description>
    <label>Sales Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Music_Product_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>