force-app/main/default/objects/Music_Product_Return__c/validationRules/Sales_Associate_Music_Product_Return.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Associate_Music_Product_Return</fullName>
    <active>true</active>
    <description>Every Music Product Return must have a Sales Associate User to handle the process.</description>
    <errorConditionFormula>Sales_Associate__r.UserRole.Name &lt;&gt; &apos;Sales Associate Role&apos;</errorConditionFormula>
    <errorDisplayField>Sales_Associate__c</errorDisplayField>
    <errorMessage>You require that a user is entered for the Sales Associate field.</errorMessage>
</ValidationRule>